Fixed search input overflow, removed loader gif

--- a/field-object.css
+++ b/field-object.css
@@ -113,7 +113,7 @@ header {
 
 				#search-query:focus {
 					font-size: 1.25rem;
-					width: 300%;
+					width: 100%;
 					margin-bottom: 1.25rem;
 					background-color: white;
 					cursor: auto;
@@ -288,6 +288,10 @@ section#body {
 						-moz-transition: opacity 200ms ease;
 						-o-transition: opacity 200ms ease;
 					}
+
+			.no-results #load-gif {
+				display: none;
+				}
 
 	.result {
 		margin: 0;
